<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, HWCameraActivity!</string>
    <string name="app_name">INZ-200</string>
    <string name="video_set">图像设置</string>
    <string name="color_change">彩黑切换</string>
    <string name="auto">自动</string>
    <string name="self">手动</string>
    <string name="color">彩色</string>
    <string name="white">黑白</string>
    <string name="laser">红外激光照明</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string name="high_power">高功率</string>
    <string name="low_power">低功率</string>
    <string name="record">录像</string>
    <string name="move_detect">入侵报警</string>
    <string name="ok">确定</string>
    <string name="link_error">连接错误，请重新连接视频</string>
    <string name="load_data">正在设置</string>
    <string name="please_wait">请稍等</string>
    <string name="configuration">正在获取配置</string>
    <string name="surface_scale">辅助调焦</string>
    <string name="scale_large">放大</string>
    <string name="scale_normal">正常</string>
    <string name="lowest_shutter">慢速快门设置</string>
    <string name="max_gain">增益调节</string>
   
    <string-array name="shutter_arry">
        <item>请选择：</item>
        <item>1/2秒</item>
        <item>1/4秒</item>
        <item>1/7秒</item>
        <item>1/12.5秒</item>
    </string-array> 
    
    <style name="MyCheckBox" parent="@android:style/Widget.CompoundButton.CheckBox">
		<item name="android:button">@drawable/cb_select</item>
	</style>

</resources>