<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<android.opengl.GLSurfaceView
        android:id="@+id/glsurface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="211dp"
    android:layout_height="match_parent"
    android:scrollbars="none"
     >
<LinearLayout
    android:id="@+id/surface_set"
    android:layout_width="211dp"
    android:layout_height="wrap_content"
    android:background="@drawable/surface_icon_bk"
    android:gravity="center|top"
    android:orientation="vertical" 
    >

    <!--android:visibility="gone"  -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:text="@string/video_set" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:text="@string/color_change" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cb_auto_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyCheckBox"
                     />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" 
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auto" 
                        android:textColor="@color/red"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/self" 
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" 
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/cb_color_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyCheckBox" />

                <LinearLayout
                    android:id="@+id/ll_color_change"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" 
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color" 
                        android:textColor="@color/red"/>

                    <TextView
                        android:id="@+id/tv_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/white" 
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:textSize="18sp"
        android:text="@string/laser" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cb_laser_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyCheckBox"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_on"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_off"
                android:textColor="@color/white" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_laser_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_weight="1"
            style="@style/MyCheckBox"
            android:paddingRight="10dip"
            android:enabled="false" />

        <LinearLayout
            android:id="@+id/ll_change_power"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"   >

            <TextView
                android:id="@+id/tv_high_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_power"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_low_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_power"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/move_detect" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/surface_scale" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cb_move_detect"
            style="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="25dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_switch_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_on"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_switch_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_off"
                android:textColor="@color/white" />

        </LinearLayout>
        
        <CheckBox
            android:id="@+id/cb_scale"
            style="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:layout_marginLeft="25dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_scale_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_large"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_scale_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_normal"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/lowest_shutter" />

        </LinearLayout>
        <!--  <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dip"
                android:text="@string/max_gain" />

        </LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:gravity="center_vertical" >
       <CheckBox
            android:id="@+id/cb_shutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyCheckBox"
            />

		<Spinner
		    android:id="@+id/spinner_shutter"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/max_gain" />

        </LinearLayout>
        <!--  <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dip"
                android:text="@string/max_gain" />

        </LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:gravity="center_vertical" >
		<CheckBox
            android:id="@+id/cb_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyCheckBox"
            />
		<Spinner
		    android:id="@+id/spinner_gain"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />
            
    </LinearLayout>
   <!--   <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/files_path" />-->

</LinearLayout>
</ScrollView>
<!-- <TextView
    android:id="@+id/sd_space"
    android:layout_gravity="right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:visibility="gone" />

 <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleLarge"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />-->

</FrameLayout>